# graphrag-eval

./: README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: _pull_requests.yml  _release.yml
doc/: 0-intro.md  aggregate-metrics.md  command-line.md  example-usage-code.md  installation.md  output-keys.md  steps-score.md
docs/: 0-intro.md  config.md  configuration.md  custom-evaluation.md  custom.md  evaluation-results.md  example-aggregates-output.md  input.md  install.md  installation.md  intro.md  license.md  llm-use-in-evaluation.md  llm.md  metrics.md  ouput-keys.md  output-keys.md  output.md  quickstart.md  reference-qa-data.md  responses-to-evaluate.md  retrieval-evaluation-using-chunk-ids.md  retrieval-ids.md  steps-score.md  steps.md  usage.md
docs/examples/: aggregates.yaml  output.md  output.yaml  reference.yaml  target.json
graphrag_eval/: aggregation.py  answer_correctness.py  answer_relevance.py  custom_evaluation.py  evaluation.py  evaluator.py  llm.py  llm_factory.py  util.py
graphrag_eval/cli/: answer_correctness.py
graphrag_eval/prompts/: template.md
graphrag_eval/steps/: __init__.py  evaluation.py  iri_discovery.py  retrieval_answer.py  retrieval_context_texts.py  retrieval_evaluation_using_context_texts.py  sparql.py  timeseries.py
system-tests/: answer_correctness.py  answer_correctness_azure.py  answer_correctness_openai.py  answer_relevance.py  answer_relevance_azure.py  answer_relevance_openai.py  retrieval_answer.py  retrieval_answer_openai.py  retrieval_context_texts.py  retrieval_context_texts_openai.py  retrieval_evaluation_using_reference_context.py  test_answer_correctness_azure.py  test_answer_correctness_openai.py  test_answer_relevance_azure.py  test_answer_relevance_openai.py  test_custom_evaluation.py  test_retrieval_answer_openai.py  test_retrieval_context_texts_openai.py
system-tests/config/: legal-config.yaml
tests/: test_aggregation.py  test_evaluation.py  test_llm.py  test_llm_factory.py  util.py
tests-with-llm/: test_answer_correctness.py  test_answer_relevance.py  test_custom_evaluation.py  test_evaluation.py  test_llm.py  test_llm_factory.py
tests-with-llm/cli/: test_answer_correctness.py
tests-with-llm/steps/: test_retrieval_answer.py  test_retrieval_context_texts.py
tests-with-llm/test_data/: actual_responses_1.jsonl  config-azure.yaml  config-llm-and-custom-evaluations.yaml  config-llm.yaml  config-openai-and-custom-evaluations.yaml  config-openai.yaml  custom_eval_prompt_1.txt  evaluation_1.yaml  evaluation_3.yaml  evaluation_5.yaml  evaluation_6.yaml  (+3 more)
tests-with-openai/: test_answer_correctness.py  test_answer_relevance.py  test_custom_evaluation.py  test_evaluation.py
(+56 files in other folders)
